# TrilogySAMP-SDK

./: CMakeLists.txt  LICENSE
include/trilogysamp-sdk/: chat.hpp  config.hpp  core.hpp  dialog.hpp  events.hpp  local_player.hpp  logger.hpp  network.hpp  object.hpp  object_pool.hpp  pickup_pool.hpp  player.hpp  player_pool.hpp  player_tags.hpp  plugin.hpp  pool.hpp  scoreboard.hpp  sdk.hpp  vehicle.hpp  vehicle_pool.hpp
include/trilogysamp-sdk/entities/: pickup.hpp  player.hpp  remote_player.hpp
include/trilogysamp-sdk/multiplayer/: chat.hpp  dialog.hpp  player_tags.hpp  scoreboard.hpp
include/trilogysamp-sdk/net/: network.hpp
include/trilogysamp-sdk/storage/: object.hpp  pickup.hpp  player.hpp  storage.hpp  vehicle.hpp
include/tsamp-sdk/: chat.hpp  core.hpp  dialog.hpp  network.hpp  sdk.hpp
tests/: CMakeLists.txt
tests/testdll/: CMakeLists.txt  main.cpp
